--- a/index.html
+++ b/index.html
@@ -3,7 +3,82 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="En esta página web encontrarás las mejores configuraciones para tus juegos adaptadas a tu hardware"
+    />
+    <meta
+      name="keywords"
+      content="Graficos, fps, configuracion, optimizacion, juegos"
+    />
+    <link
+      rel="icon"
+      href="/html5_arquitectura_informacion/Assets/favicon.ico"
+      type="image/x-icon"
+    />
+    <title>Config. Juegos</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <h1>
+          <a href="https://inicio .com">
+            <img
+              src="/html5_arquitectura_informacion/Assets/Logo_principal.jpg"
+              alt="Logotipo con un navegador y engranajes"
+              width="150"
+          /></a>
+        </h1>
+        <ul>
+          <li>
+            <a href="https://conversor_sensi.com">Conversor de sensibilidad</a>
+          </li>
+          <li>
+            <a href="https://eDPI.com">Calculadora de eDPI</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <article id="Descripcion">
+        <p>
+          En esta web podrás encontrar la <strong>MEJOR</strong>configuración
+          todos tus juegos favoritos adaptada a tus objetivos y al hardware de
+          tu equipo
+        </p>
+        <section id="Formulario">
+          <img
+            alt="Portada con diferentes videojuegos"
+            src="/html5_arquitectura_informacion/Assets/portada_juegos.jpeg"
+            width="350"
+          />
+
+          <form>
+            <fieldset>
+              <legend>Videojuego</legend>
+              <select name="Videojuego">
+                <option value="">Selecciona un videojuego</option>
+                <option value="Valorant">Valorant</option>
+                <option value="Counter Strike 2">Counter Strike 2</option>
+                <option value="GTA V">GTA V</option>
+                <option value="League of legends">League of legends</option>
+              </select>
+              <label>Objetivo</label>
+              <input type="radio" id="Calidad" name="Objetivo" />
+              <label for="Calidad">Mejor calidad</label>
+
+              <input type="radio" id="Equilibrado" name="Objetivo" />
+              <label for="Equilibrado">Equilibrado</label>
+
+              <input type="radio" id="Rendimiento" name="Objetivo" />
+              <label for="Rendimiento">Mejor rendimiento</label>
+            </fieldset>
+            <fieldset>
+              <legend>Hardware</legend>
+            </fieldset>
+          </form>
+        </section>
+      </article>
+    </main>
+  </body>
 </html>
