--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
       name="keywords"
       content="Graficos, fps, configuracion, optimizacion, juegos"
     />
-    <link
-      rel="icon"
-      href="/html5_arquitectura_informacion/Assets/favicon.ico"
-      type="image/x-icon"
-    />
+    <link rel="icon" href="/Assets/favicon.ico" type="image/x-icon" />
     <title>Config. Juegos</title>
   </head>
   <body>
@@ -24,7 +20,7 @@
         <h1>
           <a href="https://inicio .com">
             <img
-              src="/html5_arquitectura_informacion/Assets/Logo_principal.jpg"
+              src="/Assets/Logo_principal.jpg"
               alt="Logotipo con un navegador y engranajes"
               width="150"
           /></a>
@@ -49,7 +45,7 @@
         <section id="Formulario">
           <img
             alt="Portada con diferentes videojuegos"
-            src="/html5_arquitectura_informacion/Assets/portada_juegos.jpeg"
+            src="/Assets/portada_juegos.jpeg"
             width="350"
           />
 
