--- a/index.html
+++ b/index.html
@@ -71,6 +71,39 @@
             </fieldset>
             <fieldset>
               <legend>Hardware</legend>
+              <select name="CPU">
+                <option>Seleccione su procesador</option>
+                <optgroup label="INTEL">
+                  <option>Intel core i3</option>
+                  <option>Intel core i5</option>
+                  <option>Intel core i7</option>
+                  <option>Intel core i9</option>
+                </optgroup>
+                <optgroup label="AMD">
+                  <option>Ryzen 3</option>
+                  <option>Ryzen 5</option>
+                  <option>Ryzen 7</option>
+                </optgroup>
+              </select>
+              <select name="GPU">
+                <option>Seleccione su tarjeta gráfica</option>
+                <optgroup label="NVIDIA">
+                  <option>Gforce rtx 2000 series</option>
+                  <option>Gforce rtx 3000 series</option>
+                  <option>Gforce rtx 4000 series</option>
+                </optgroup>
+                <optgroup label="AMD">
+                  <option>RX 500</option>
+                  <option>RX 6000</option>
+                  <option>RX 7000</option>
+                </optgroup>
+              </select>
+              <select name="RAM">
+                <option>Seleccione su memoria RAM</option>
+                <option>8GB</option>
+                <option>16GB</option>
+                <option>32GB</option>
+              </select>
             </fieldset>
           </form>
         </section>
