--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                 <option>32GB</option>
               </select>
             </fieldset>
+            <input type="button" value="Enviar" />
           </form>
         </section>
       </article>
