--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
             width="350"
           />
 
-          <form>
+          <form
+            action="https://resultado_config.com"
+            id="formConfigurador"
+            method="get"
+          >
             <fieldset>
               <legend>Videojuego</legend>
               <select name="Videojuego">
@@ -105,10 +109,24 @@
                 <option>32GB</option>
               </select>
             </fieldset>
-            <input type="button" value="Enviar" />
+            <input type="submit" value="Enviar" />
           </form>
         </section>
       </article>
     </main>
+    <footer>
+      <p>Información de contacto:</p>
+      <ul>
+        <li>Email: info@optimizacion.juegos</li>
+        <li>Teléfono: 922123456</li>
+        <li>
+          <a href="https://www.instagram.com/optimizacionJuegos">Instagram</a>
+        </li>
+        <li>
+          <a href="https://www.youtube.com/optimizacionJuegos">YouTube</a>
+        </li>
+      </ul>
+      <p>&copy; Configurador de juegos 2024</p>
+    </footer>
   </body>
 </html>
