--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
     <link rel="icon" href="/Assets/favicon.ico" type="image/x-icon" />
     <title>Config. Juegos</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
