--- a/index.html
+++ b/index.html
@@ -1,133 +1,119 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="En esta página web encontrarás las mejores configuraciones para tus juegos adaptadas a tu hardware"
-    />
-    <meta
-      name="keywords"
-      content="Graficos, fps, configuracion, optimizacion, juegos"
-    />
-    <link rel="icon" href="/Assets/favicon.ico" type="image/x-icon" />
-    <title>Config. Juegos</title>
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body>
-    <header>
-      <nav>
-        <h1>
-          <a href="https://inicio .com">
-            <img
-              src="/Assets/Logo_principal.jpg"
-              alt="Logotipo con un navegador y engranajes"
-              width="150"
-          /></a>
-        </h1>
-        <ul>
-          <li>
-            <a href="https://conversor_sensi.com">Conversor de sensibilidad</a>
-          </li>
-          <li>
-            <a href="https://eDPI.com">Calculadora de eDPI</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <article id="Descripcion">
-        <p>
-          En esta web podrás encontrar la <strong>MEJOR</strong>configuración
-          todos tus juegos favoritos adaptada a tus objetivos y al hardware de
-          tu equipo
-        </p>
-        <section id="Formulario">
-          <img
-            alt="Portada con diferentes videojuegos"
-            src="/Assets/portada_juegos.jpeg"
-            width="350"
-          />
 
-          <form
-            action="https://resultado_config.com"
-            id="formConfigurador"
-            method="get"
-          >
-            <fieldset>
-              <legend>Videojuego</legend>
-              <select name="Videojuego">
-                <option value="">Selecciona un videojuego</option>
-                <option value="Valorant">Valorant</option>
-                <option value="Counter Strike 2">Counter Strike 2</option>
-                <option value="GTA V">GTA V</option>
-                <option value="League of legends">League of legends</option>
-              </select>
-              <label>Objetivo</label>
-              <input type="radio" id="Calidad" name="Objetivo" />
-              <label for="Calidad">Mejor calidad</label>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="En esta página web encontrarás las mejores configuraciones para tus juegos adaptadas a tu hardware" />
+  <meta name="keywords" content="Graficos, fps, configuracion, optimizacion, juegos" />
+  <link rel="icon" href="./Assets/favicon.ico" type="image/x-icon" />
+  <title>Config. Juegos</title>
+  <link rel="stylesheet" href="./style.css" />
+</head>
 
-              <input type="radio" id="Equilibrado" name="Objetivo" />
-              <label for="Equilibrado">Equilibrado</label>
-
-              <input type="radio" id="Rendimiento" name="Objetivo" />
-              <label for="Rendimiento">Mejor rendimiento</label>
-            </fieldset>
-            <fieldset>
-              <legend>Hardware</legend>
-              <select name="CPU">
-                <option>Seleccione su procesador</option>
-                <optgroup label="INTEL">
-                  <option>Intel core i3</option>
-                  <option>Intel core i5</option>
-                  <option>Intel core i7</option>
-                  <option>Intel core i9</option>
-                </optgroup>
-                <optgroup label="AMD">
-                  <option>Ryzen 3</option>
-                  <option>Ryzen 5</option>
-                  <option>Ryzen 7</option>
-                </optgroup>
-              </select>
-              <select name="GPU">
-                <option>Seleccione su tarjeta gráfica</option>
-                <optgroup label="NVIDIA">
-                  <option>Gforce rtx 2000 series</option>
-                  <option>Gforce rtx 3000 series</option>
-                  <option>Gforce rtx 4000 series</option>
-                </optgroup>
-                <optgroup label="AMD">
-                  <option>RX 500</option>
-                  <option>RX 6000</option>
-                  <option>RX 7000</option>
-                </optgroup>
-              </select>
-              <select name="RAM">
-                <option>Seleccione su memoria RAM</option>
-                <option>8GB</option>
-                <option>16GB</option>
-                <option>32GB</option>
-              </select>
-            </fieldset>
-            <input type="submit" value="Enviar" />
-          </form>
-        </section>
-      </article>
-    </main>
-    <footer>
-      <p>Información de contacto:</p>
+<body>
+  <header>
+    <nav>
+      <h1>
+        <a href="https://inicio .com">
+          <img src="./Assets/Logo_principal.png" alt="Logotipo con un navegador y engranajes" width="150" /></a>
+      </h1>
       <ul>
-        <li>Email: info@optimizacion.juegos</li>
-        <li>Teléfono: 922123456</li>
         <li>
-          <a href="https://www.instagram.com/optimizacionJuegos">Instagram</a>
+          <a href="https://conversor_sensi.com">Conversor de sensibilidad</a>
         </li>
         <li>
-          <a href="https://www.youtube.com/optimizacionJuegos">YouTube</a>
+          <a href="https://eDPI.com">Calculadora de eDPI</a>
         </li>
       </ul>
-      <p>&copy; Configurador de juegos 2024</p>
-    </footer>
-  </body>
+    </nav>
+  </header>
+  <main>
+    <article id="Descripcion">
+      <p>
+        En esta web podrás encontrar la <strong>MEJOR</strong>configuración
+        todos tus juegos favoritos adaptada a tus objetivos y al hardware de
+        tu equipo
+      </p>
+      <section id="Formulario">
+        <img alt="Portada con diferentes videojuegos" src="./Assets/portada_juegos.jpeg" width="350" />
+
+        <form action="https://resultado_config.com" id="formConfigurador" method="get">
+          <fieldset>
+            <legend>Videojuego</legend>
+            <select name="Videojuego">
+              <option value="Valorant">Valorant</option>
+              <option value="Counter Strike 2">Counter Strike 2</option>
+              <option value="GTA V">GTA V</option>
+              <option value="League of legends">League of legends</option>
+              <option value="">Selecciona un videojuego</option>
+            </select>
+            <label>Objetivo</label>
+            <input type="radio" id="Calidad" name="Objetivo" />
+            <label for="Calidad">Mejor calidad</label>
+
+            <input type="radio" id="Equilibrado" name="Objetivo" />
+            <label for="Equilibrado">Equilibrado</label>
+
+            <input type="radio" id="Rendimiento" name="Objetivo" />
+            <label for="Rendimiento">Mejor rendimiento</label>
+          </fieldset>
+          <fieldset>
+            <legend>Hardware</legend>
+            <select name="CPU">
+              <option>Seleccione su procesador</option>
+              <optgroup label="INTEL">
+                <option>Intel core i3</option>
+                <option>Intel core i5</option>
+                <option>Intel core i7</option>
+                <option>Intel core i9</option>
+              </optgroup>
+              <optgroup label="AMD">
+                <option>Ryzen 3</option>
+                <option>Ryzen 5</option>
+                <option>Ryzen 7</option>
+              </optgroup>
+            </select>
+            <select name="GPU">
+              <option>Seleccione su tarjeta gráfica</option>
+              <optgroup label="NVIDIA">
+                <option>Gforce rtx 2000 series</option>
+                <option>Gforce rtx 3000 series</option>
+                <option>Gforce rtx 4000 series</option>
+              </optgroup>
+              <optgroup label="AMD">
+                <option>RX 500</option>
+                <option>RX 6000</option>
+                <option>RX 7000</option>
+              </optgroup>
+            </select>
+            <select name="RAM">
+              <option>Seleccione su memoria RAM</option>
+              <option>8GB</option>
+              <option>16GB</option>
+              <option>32GB</option>
+            </select>
+          </fieldset>
+          <input type="submit" value="Enviar" />
+        </form>
+      </section>
+    </article>
+  </main>
+  <footer>
+    <p>Información de contacto:</p>
+    <ul>
+      <li>Email: info@optimizacion.juegos</li>
+      <li>Teléfono: 922123456</li>
+      <li>
+        <a href="https://www.instagram.com/optimizacionJuegos">Instagram</a>
+      </li>
+      <li>
+        <a href="https://www.youtube.com/optimizacionJuegos">YouTube</a>
+      </li>
+    </ul>
+    <p>&copy; Configurador de juegos 2024</p>
+  </footer>
+</body>
+
 </html>
