--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   <main>
     <article id="Descripcion">
       <p>
-        En esta web podrás encontrar la <strong>MEJOR</strong>configuración
-        todos tus juegos favoritos adaptada a tus objetivos y al hardware de
+        En esta web podrás encontrar la <strong>MEJOR</strong> configuración
+        para tus juegos favoritos adaptada a tus objetivos y al hardware de
         tu equipo
       </p>
       <section id="Formulario">
